@@ -185,9 +185,11 @@ public class JCpgAddPictureManager extends JCpgAddManager implements JCpgAddTree
 	*/
 	public void createActionPerformed(java.awt.event.ActionEvent evt) {
 				
-		JCpgAlbum album = (JCpgAlbum) getNode().getUserObject();
+		JCpgAlbum album = (JCpgAlbum) getNode().getUserObject();	
 
 		File[] selectedFiles = pictureChooser.getSelectedFiles();
+		
+		System.out.println(selectedFiles.length + "ggg");
 
 		if (selectedFiles.length > 0) { // only proceed if user selected file(s)
 
@@ -195,41 +197,45 @@ public class JCpgAddPictureManager extends JCpgAddManager implements JCpgAddTree
 
 			for (int i = 0; i < selectedFiles.length; i++) {
 				
-				// make new picture
-				ImageIcon image = new ImageIcon(selectedFiles[i].getAbsolutePath()); // for width and height
-				File source = new File(selectedFiles[i].getAbsolutePath());
-				File destination = new File(getCpgConfig().getValueFor("fullpath") + "userpics/10001/" + selectedFiles[i].getName());
-				JCpgPictureTransferer transferer = new JCpgPictureTransferer();
-				long filesize = 0;
-
-				try {
-
-					filesize = transferer.copyFile(source, destination); // copy picture locally
-					JCpgPictureResizer thumb = new JCpgPictureResizer(getJCpgUIReference(), getCpgConfig().getValueFor("fullpath")+ "userpics/10001/", selectedFiles[i].getName());
-					thumb.makeThumb();
-
-				} catch (Exception e) {
+				if(selectedFiles[i].isFile()){
+				
+					// make new picture
+					ImageIcon image = new ImageIcon(selectedFiles[i].getAbsolutePath()); // for width and height
+					File source = new File(selectedFiles[i].getAbsolutePath());
+					File destination = new File(getCpgConfig().getValueFor("fullpath") + "userpics/10001/" + selectedFiles[i].getName());
+					JCpgPictureTransferer transferer = new JCpgPictureTransferer();
+					long filesize = 0;
+	
+					try {
+	
+						filesize = transferer.copyFile(source, destination); // copy picture locally
+						JCpgPictureResizer thumb = new JCpgPictureResizer(getJCpgUIReference(), getCpgConfig().getValueFor("fullpath")+ "userpics/10001/", selectedFiles[i].getName());
+						thumb.makeThumb();
+	
+					} catch (Exception e) {
+						
+						System.out.println("JCpgAddPictureManager: couldn't copy picture to local Cpg");
+	
+					}
+	
+					Date date = new Date(); // used to get number of seconds since 1970 for ctime
+	
+					JCpgPicture picture = new JCpgPicture(-1, album.getId(), "userpics/10001/",selectedFiles[i].getName(), (int) filesize,(int) filesize, image.getIconWidth(), image.getIconHeight(), 0, (int) date.getTime(), 0,"", 0, 0, getTitleField().getText(),getDescriptionField().getText(), "", true, 0, 0, 0);
+	
+					picture.addUi(super.getJCpgUIReference());
+					picture.generateSqlInsertQuery();
+	
+					album.addPicture(picture);
+					DefaultMutableTreeNode newNode = new DefaultMutableTreeNode(picture);
+					getNode().add(newNode);
+	
+					getGallerySaver().saveGallery(); // save current gallery state
+	
+					progress.changeProgressbarValue(i);
+	
+					SwingUtilities.updateComponentTreeUI(getJCpgUIReference().getTree()); // workaround for java bug 4173369
 					
-					System.out.println("JCpgAddPictureManager: couldn't copy picture to local Cpg");
-
 				}
-
-				Date date = new Date(); // used to get number of seconds since 1970 for ctime
-
-				JCpgPicture picture = new JCpgPicture(-1, album.getId(), "userpics/10001/",selectedFiles[i].getName(), (int) filesize,(int) filesize, image.getIconWidth(), image.getIconHeight(), 0, (int) date.getTime(), 0,"", 0, 0, getTitleField().getText(),getDescriptionField().getText(), "", true, 0, 0, 0);
-
-				picture.addUi(super.getJCpgUIReference());
-				picture.generateSqlInsertQuery();
-
-				album.addPicture(picture);
-				DefaultMutableTreeNode newNode = new DefaultMutableTreeNode(picture);
-				getNode().add(newNode);
-
-				getGallerySaver().saveGallery(); // save current gallery state
-
-				progress.changeProgressbarValue(i);
-
-				SwingUtilities.updateComponentTreeUI(getJCpgUIReference().getTree()); // workaround for java bug 4173369
 
 			}
 
