@@ -1,3 +1,4 @@
+Found a bug in JCpgPictureAdder: when using apple + A (to select all) in a map with pictures, a java.lang.ArrayIndexOutOfBoundsException: -1 exception is generated form with Apple's own UI java code. Selecting the same files manually, will not throw this exception
 Fixed a bug where JCpg wasn't always able to copy a local file to the JCpg local album
 The usermanager's offline button is disabled when there is now local Coppermine configuration
 The Coppermine configuration is now also saved to an XML file
